Made Ottergram more mobile responsive, created flexbox based layout

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -8,12 +8,34 @@
        url('fonts/LAKESHOR-webfont.tff') format('truetype'),
        url('fonts/LAEKSHOR-webfont.svg#lakeshore') format('svg');
 }
+
+@font-face {
+  font-family: 'airstreamregular';
+  font-style: normal;
+  font-weight: normal;
+  src: url('fonts/Airstream-webfont.eot');
+  src: url('fonts/Airstream-webfont.eot?#iefix') format('embedded-opentype'),
+       url('fonts/Airstream-webfont.woff') format('woff')
+       url('fonts/Airstream-webfont.tff') format('truetype')
+       url('fonts/Airstream-webfont.svg#airstreamregular') format('svg');
+}
+
+html, body {
+  height: 100%;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
   font-size: 10px;
 }
 
 a {
   text-decoration: none;
+}
+
+.main-header {
+  flex: 0 1 auto;
 }
 
 .logo-text {
@@ -24,24 +46,35 @@ a {
   font-family: lakeshore;
 }
 
+.main-content {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+}
+
 .thumbnail-image {
   display: block;
   width: 100%;
 }
 
-.thumbnail-item + .thumbnail-item { /*This adds a top margin of 10px to any consecutive thumbnail-items so all except for the top most thumbnail-item*/
-  margin-top: 10px;
-}
 
 .thumbnail-item {
   border: 1px solid rgb(100%, 100% ,100%); /*Browsers that support rgba will use the second line, those that don't recognize it will use the first*/
   border: 1px solid rgba(100%, 100%, 100%, 0.8);
-  display: block;
+  display: inline-block;
+  max-width: 120px;
+  min-width: 120px;
 }
 
 .thumbnail-list {
+  display: flex;
+  flex: 0 1 auto;
+  justify-content: space-between;
   list-style: none;
+  order: 2;
+  overflow-x: auto;
   padding: 0;
+  white-space: nowrap;
 }
 
 .thumbnail-title {
@@ -51,4 +84,30 @@ a {
   font-size: 18px;
   margin: 0;
   padding: 4px 10px;
+}
+
+.detail-image-container {
+  align-items: center;
+  display: flex;
+  flex: 1 1 auto;
+  justify-content: center;
+}
+
+.detail-image-frame {
+  position: relative;
+  text-align: center;
+}
+
+.detail-image {
+  width: 90%;
+}
+
+.detail-image-title {
+  bottom: -16px;
+  color: white;
+  font-family: airstreamregular;
+  font-size: 40px;
+  left: 4px;
+  position: absolute;
+  text-shadow: rgba(0, 0, 0, 0.9) 1px 2px 9px;
 }
